Fix table cell vertical alignment in prose

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -88,7 +88,7 @@
 		@apply w-full;
 	}
 	.prose :is(th, td) {
-		@apply border-b border-astro-gray-500 py-2 px-4 align-baseline;
+		@apply border-b border-astro-gray-500 py-2 px-4 align-top;
 	}
 	.prose :is(th, td):first-child {
 		@apply pl-0;
